--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-latex": "^2.0.0",
     "sweetalert2": "^11.10.3"
   },
   "devDependencies": {
